--- a/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
+++ b/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
@@ -10,6 +10,9 @@
         <array key="Montserrat-Bold.ttf">
             <string>Montserrat-Bold</string>
         </array>
+        <array key="Montserrat-SemiBold.ttf">
+            <string>Montserrat-SemiBold</string>
+        </array>
     </customFonts>
     <scenes>
         <!--View Controller-->
@@ -23,21 +26,119 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movies" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="juW-cx-dm1">
                                 <rect key="frame" x="133.5" y="104" width="147" height="49"/>
                                 <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="40"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NPd-1l-R0v">
+                                <rect key="frame" x="343" y="113" width="36" height="33.5"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="plus" catalog="system">
+                                    <attributedString key="attributedTitle"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="34" scale="default" weight="medium"/>
+                                </state>
+                                <connections>
+                                    <action selector="addItemPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wLG-pf-fNG"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="juW-cx-dm1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="4aI-py-TlJ"/>
+                            <constraint firstItem="NPd-1l-R0v" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="69" id="dbh-9X-rR9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NPd-1l-R0v" secondAttribute="trailing" constant="35" id="jLK-rr-MOs"/>
                             <constraint firstItem="juW-cx-dm1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uCl-74-kDo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <segue destination="B0j-lq-g5v" kind="presentation" identifier="segToAddItem" modalPresentationStyle="fullScreen" id="QqO-IU-92R"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="112.5"/>
         </scene>
+        <!--Create Item View Controller-->
+        <scene sceneID="qkF-DI-SM1">
+            <objects>
+                <viewController id="B0j-lq-g5v" customClass="CreateItemViewController" customModule="MovieDiary" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="p3a-Jz-iIR">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Movie" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="as2-rd-cAW">
+                                <rect key="frame" x="96" y="104" width="222.5" height="49"/>
+                                <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="40"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NPu-V3-5j6">
+                                <rect key="frame" x="62" y="248" width="290" height="38"/>
+                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="290" id="f4I-kE-Rr9"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="24"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="euS-ZC-k4m" userLabel="Back arrow">
+                                <rect key="frame" x="35" y="115" width="19" height="27"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="chevron.left" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="21" scale="large" weight="bold"/>
+                                </state>
+                                <connections>
+                                    <action selector="backArrowPressed:" destination="B0j-lq-g5v" eventType="touchUpInside" id="0Xs-Mf-9Tt"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Comment" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mYC-8l-46x" userLabel="Comment input">
+                                <rect key="frame" x="62" y="396" width="290" height="38"/>
+                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="290" id="yTk-jj-0tZ"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="24"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="NPu-V3-5j6" firstAttribute="centerX" secondItem="p3a-Jz-iIR" secondAttribute="centerX" id="DHe-md-eMc"/>
+                            <constraint firstItem="as2-rd-cAW" firstAttribute="top" secondItem="VcT-ea-ShC" secondAttribute="top" constant="60" id="JVi-KT-LZT"/>
+                            <constraint firstItem="mYC-8l-46x" firstAttribute="centerX" secondItem="p3a-Jz-iIR" secondAttribute="centerX" id="dlO-HJ-lEL"/>
+                            <constraint firstItem="NPu-V3-5j6" firstAttribute="top" secondItem="as2-rd-cAW" secondAttribute="bottom" constant="95" id="el1-kP-nPG"/>
+                            <constraint firstItem="euS-ZC-k4m" firstAttribute="top" secondItem="VcT-ea-ShC" secondAttribute="top" constant="71" id="l2U-Zn-7zD"/>
+                            <constraint firstItem="mYC-8l-46x" firstAttribute="top" secondItem="NPu-V3-5j6" secondAttribute="bottom" constant="110" id="p2P-TK-2h5"/>
+                            <constraint firstItem="as2-rd-cAW" firstAttribute="centerX" secondItem="p3a-Jz-iIR" secondAttribute="centerX" id="vZ6-SQ-kIP"/>
+                            <constraint firstItem="euS-ZC-k4m" firstAttribute="leading" secondItem="VcT-ea-ShC" secondAttribute="leading" constant="35" id="yLu-8N-TRk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="VcT-ea-ShC"/>
+                    </view>
+                    <connections>
+                        <outlet property="commentInput" destination="mYC-8l-46x" id="5cz-U8-Mde"/>
+                        <outlet property="titleInput" destination="NPu-V3-5j6" id="j0L-Bj-zZF"/>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="segToHome" modalPresentationStyle="fullScreen" id="rFX-1W-yYe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kvc-M1-xPg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="939" y="113"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="chevron.left" catalog="system" width="48" height="64"/>
+        <image name="plus" catalog="system" width="64" height="56"/>
+    </resources>
 </document>
