--- a/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
+++ b/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="34" scale="default" weight="medium"/>
                                 </state>
                                 <connections>
-                                    <action selector="addItemPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wLG-pf-fNG"/>
+                                    <segue destination="B0j-lq-g5v" kind="presentation" modalPresentationStyle="fullScreen" id="IfT-2n-j1A"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -53,9 +53,6 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <connections>
-                        <segue destination="B0j-lq-g5v" kind="presentation" identifier="segToAddItem" modalPresentationStyle="fullScreen" id="QqO-IU-92R"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -97,7 +94,7 @@
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="21" scale="large" weight="bold"/>
                                 </state>
                                 <connections>
-                                    <action selector="backArrowPressed:" destination="B0j-lq-g5v" eventType="touchUpInside" id="0Xs-Mf-9Tt"/>
+                                    <segue destination="kTO-V9-Dfi" kind="unwind" unwindAction="unwindToHomeWithSegue:" id="aG5-KX-G5r"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Comment" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mYC-8l-46x" userLabel="Comment input">
@@ -115,10 +112,13 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nvy-M9-o3f">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nvy-M9-o3f">
                                 <rect key="frame" x="102" y="762" width="210" height="64"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="2sM-li-gZP"/>
+                                    <constraint firstAttribute="width" constant="210" id="taA-Xb-IBu"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Montserrat-ExtraBold" family="Montserrat" pointSize="24"/>
                                 <state key="normal" title="Save">
                                     <color key="titleColor" red="0.80000000000000004" green="0.16862745098039217" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -128,11 +128,16 @@
                                         <integer key="value" value="7"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="savePressed:" destination="B0j-lq-g5v" eventType="touchUpInside" id="JD0-DL-8d6"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="VcT-ea-ShC" firstAttribute="bottom" secondItem="nvy-M9-o3f" secondAttribute="bottom" constant="36" id="3VC-3S-aCj"/>
                             <constraint firstItem="NPu-V3-5j6" firstAttribute="centerX" secondItem="p3a-Jz-iIR" secondAttribute="centerX" id="DHe-md-eMc"/>
+                            <constraint firstItem="nvy-M9-o3f" firstAttribute="centerX" secondItem="p3a-Jz-iIR" secondAttribute="centerX" id="Fzy-xX-3wT"/>
                             <constraint firstItem="as2-rd-cAW" firstAttribute="top" secondItem="VcT-ea-ShC" secondAttribute="top" constant="60" id="JVi-KT-LZT"/>
                             <constraint firstItem="mYC-8l-46x" firstAttribute="centerX" secondItem="p3a-Jz-iIR" secondAttribute="centerX" id="dlO-HJ-lEL"/>
                             <constraint firstItem="NPu-V3-5j6" firstAttribute="top" secondItem="as2-rd-cAW" secondAttribute="bottom" constant="95" id="el1-kP-nPG"/>
@@ -144,12 +149,13 @@
                         <viewLayoutGuide key="safeArea" id="VcT-ea-ShC"/>
                     </view>
                     <connections>
+                        <outlet property="backBtutton" destination="euS-ZC-k4m" id="yUa-qo-dpk"/>
                         <outlet property="commentInput" destination="mYC-8l-46x" id="5cz-U8-Mde"/>
                         <outlet property="titleInput" destination="NPu-V3-5j6" id="j0L-Bj-zZF"/>
-                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="segToHome" modalPresentationStyle="fullScreen" id="rFX-1W-yYe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kvc-M1-xPg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="kTO-V9-Dfi" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="937.68115942028987" y="112.5"/>
         </scene>
